Correct inverted expand/collapse text in accordion header
also make HeadingLevel a shared type

--- a/src/components/Accordion/_index.scss
+++ b/src/components/Accordion/_index.scss
@@ -19,11 +19,11 @@
 	}
 
 	.oec-accordion__heading-title {
+		@include u-font('body', 'lg');
+
 		* {
 			margin: 0;
 		}
-
-		font-size: x-large;
 	}
 	
 	.oec-accordion__heading-expand {
